--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,6 @@
 	<version>0.0.1</version>
 	<packaging>jar</packaging>
 
-	<name>RestMe</name>
 	<description>Demo project for Spring Boot</description>
 
 	<parent>
@@ -20,7 +19,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<java.version>1.8</java.version>
+		<java.version>1.8</java.version>		
 	</properties>
 
 	<dependencies>
@@ -38,6 +37,7 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -50,4 +50,5 @@
 	</build>
 
 
+	<name>Spring Boot Rest Sample</name>
 </project>
